# apps/core/docs/swagger.json
@@ -1454,6 +1454,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "Filter incidents by agent ID",
+                        "name": "agent_id",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "default": 50,
                         "description": "Maximum number of incidents to return",
